--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +18,7 @@
 
     <main class="content">
       <section class="profile">
-        <div class="profile__avatar"></div>
+        <img src="images/Jacques-Yves.jpg" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__person">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -127,10 +127,10 @@
             placeholder="Введите профессию"
             autocomplete="off"
           />
+          <button type="submit" form="profile-form" class="popup__btn-save">
+            Сохранить
+          </button>
         </form>
-        <button type="submit" form="profile-form" class="popup__btn-save">
-          Сохранить
-        </button>
       </div>
     </div>
 
